--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 <!-- 在 </body> 标签前添加 -->
 <div style="position: fixed; bottom: 0; left: 0; right: 0; background-color: #fff; border-top: 1px solid #ddd; display: flex; justify-content: space-around; padding: 10px 0; z-index: 1000; font-size: 14px;">
     <a href="https://blueeggs1125-art.github.io/bluekard/" style="text-decoration: none; color: #1e90ff; text-align: center;">返回</a>
-    <a href="https://blueeggs1125-art.github.io/im/2" style="text-decoration: none; color: #1e90ff; text-align: center;">下一页</a>
+    <a href="https://blueeggs1125-art.github.io/im/" style="text-decoration: none; color: #1e90ff; text-align: center;">上一页</a>
     <!-- <a href="suck.html" style="text-decoration: none; color: #1e90ff; text-align: center;">音效库</a> -->
     <!-- <a href="zaza.html" style="text-decoration: none; color: #1e90ff; text-align: center;">加载动画</a>
     <a href="team.html" style="text-decoration: none; color: #1e90ff; text-align: center;">关于</a> -->
@@ -305,4 +305,5 @@
 
     <script src="js/katu.js"></script>
 </body>
+
 </html>
